syntax = "proto3";

option go_package = "order-service/proto/users";

package users;

service UserService {
  rpc Create(UserRequest) returns (UserResponse);
}

message Address {
  uint32 buildingNumber = 1;
  string street = 2;
  string locality = 3;
  string city = 4;
  string state = 5;
  string country = 6;
  string zipcode = 7;
}

message UserRequest {
  string name = 1;
  string username = 2;
  string password = 3;
  Address address = 4;
};

message UserResponse {
  string id = 1;
  string name = 2;
  string username = 3;
  Address address = 4;
};

// protoc -Iproto --go_out=.  --go_opt=module=order-service --go-grpc_out=. --go-grpc_opt=module=order-service proto/user.proto
